Bug#55906 Read errors in MGMAPI caused by interrupted 'poll'  - Make 'ndb_socket_poller::poll' interrupt safe  - Add 'ndb_socket_poller::poll_unsafe' for those that handle interrupted wait    already  - Add signal handler catching SIGUSR1 to two test programs to allow    testing the interrupt safety.  - Create subfunction in socket_io.cpp to get rid of    duplicated time calulation and poll code